# learningWiki-plugin

./: .gitignore  README.md  SEAMS.md  __init__.py  a2a.py  api.py  commands.py  goals.py  knobs.py  knowledge_map.py  nudge.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  srs.py  store.py  subagents.py  tools.py  view.py
.github/workflows/: ci.yml
docs/adr/: 0001-learning-wiki.md
skills/learning-tutor/: SKILL.md
tests/: conftest.py  test_a2a.py  test_api.py  test_commands.py  test_goals.py  test_knobs.py  test_ledger.py  test_map.py  test_nudge.py  test_packaging.py  test_srs.py  test_store.py  test_subagents.py  test_tools.py  test_view.py
